[gd_scene load_steps=7 format=2]

[ext_resource path="res://Dialogue/blue button.png" type="Texture" id=1]
[ext_resource path="res://Dialogue/TwoOptions.gd" type="Script" id=2]
[ext_resource path="res://Dialogue/Label.gd" type="Script" id=3]
[ext_resource path="res://Dialogue/COURIER.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 5
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Button1" type="Button" parent="."]
margin_left = 72.0
margin_top = 85.0
margin_right = 247.0
margin_bottom = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button1"]
position = Vector2( 91, 22 )
scale = Vector2( 0.0938776, 0.0897196 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Button1"]
margin_left = 2.0
margin_top = 1.0
margin_right = 173.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
clip_text = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 72.0
margin_top = 133.0
margin_right = 247.0
margin_bottom = 172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button2"]
position = Vector2( 91, 21.5 )
scale = Vector2( 0.0938776, 0.0841122 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Button2"]
margin_left = 3.0
margin_top = 2.0
margin_right = 174.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
autowrap = true
clip_text = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
